--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
     "@opensearch-project/opensearch": "^3.5.1",
+    "axios": "^1.9.0",
     "cloudinary": "^2.6.1",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.5.0",
     "firebase": "^11.8.1",
     "firebase-admin": "^13.4.0",
