--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
     "@opensearch-project/opensearch": "^3.5.1",
+    "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.9.0",
     "cloudinary": "^2.6.1",
     "crypto-js": "^4.2.0",
@@ -32,18 +33,25 @@
     "firebase-admin": "^13.4.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
+    "plotly.js": "^2.35.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-plotly.js": "^2.2.0",
+    "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0",
+    "reselect": "^5.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/google.maps": "^3.58.1",
     "@types/node": "^20",
+    "@types/plotly.js": "^2.12.29",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-plotly.js": "^2.6.3",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "tailwindcss": "^4",
