--- a/package.json
+++ b/package.json
@@ -29,16 +29,16 @@
     "cloudinary": "^2.6.1",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.5.0",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
     "firebase": "^11.8.1",
     "firebase-admin": "^13.4.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
-    "plotly.js": "^2.35.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
-    "react-plotly.js": "^2.2.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "reselect": "^5.1.1"
@@ -48,10 +48,8 @@
     "@tailwindcss/postcss": "^4",
     "@types/google.maps": "^3.58.1",
     "@types/node": "^20",
-    "@types/plotly.js": "^2.12.29",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/react-plotly.js": "^2.6.3",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "tailwindcss": "^4",
