CMS & PosgresSQL Neon Integration

--- a/package.json
+++ b/package.json
@@ -15,7 +15,23 @@
     "update-system-docs": "node scripts/update-system-docs.js",
     "add-restaurants": "node scripts/add-sample-restaurants.js",
     "clear-db": "node scripts/clear-database.js --confirm",
-    "deploy-rules": "firebase deploy --only firestore:rules"
+    "deploy-rules": "firebase deploy --only firestore:rules",
+
+    "neon:setup": "node scripts/setup-neon-database.js",
+    "neon:clean": "node scripts/clean-neon-simple.js",
+    "neon:verify": "node scripts/verify-clean-setup.js",
+    "blog:test": "node scripts/test-professional-blog.js",
+    "blog:test-simple": "node scripts/test-blog-operations.js",
+    "neon:test": "node -e \"require('./src/lib/neon/client.ts').neonClient.testConnection().then(r => console.log('Connected:', r))\"",
+    "neon:info": "node -e \"require('./src/lib/neon/client.ts').neonClient.getDatabaseInfo().then(r => console.log(JSON.stringify(r, null, 2)))\"",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:migrate:deploy": "prisma migrate deploy",
+    "db:migrate:reset": "prisma migrate reset",
+    "db:seed": "prisma db seed",
+    "db:studio": "prisma studio",
+    "db:test": "curl http://localhost:3000/api/database/test",
+    "db:hybrid-test": "node -e \"const { db } = require('./src/lib/database/hybrid-client.ts'); db.sql('SELECT NOW()').then(r => console.log('Hybrid DB:', r))\""
   },
   "dependencies": {
     "@cloudinary/react": "^1.14.3",
@@ -23,8 +39,12 @@
     "@elastic/elasticsearch": "^9.0.2",
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
+    "@neondatabase/serverless": "^1.0.0",
     "@opensearch-project/opensearch": "^3.5.1",
+    "@prisma/adapter-neon": "^6.9.0",
+    "@prisma/client": "^6.9.0",
     "@reduxjs/toolkit": "^2.5.0",
+    "@types/ws": "^8.18.1",
     "axios": "^1.9.0",
     "cloudinary": "^2.6.1",
     "crypto-js": "^4.2.0",
@@ -33,20 +53,24 @@
     "echarts-for-react": "^3.0.2",
     "firebase": "^11.8.1",
     "firebase-admin": "^13.4.0",
+    "ioredis": "^5.4.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
+    "prisma": "^6.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
-    "reselect": "^5.1.1"
+    "reselect": "^5.1.1",
+    "ws": "^8.18.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/google.maps": "^3.58.1",
+    "@types/ioredis": "^5.0.0",
     "@types/node": "^20.17.57",
     "@types/react": "^19",
     "@types/react-dom": "^19",
