--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "echarts-for-react": "^3.0.2",
     "firebase": "^11.8.1",
     "firebase-admin": "^13.4.0",
+    "form-data": "^4.0.3",
     "ioredis": "^5.4.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
