Fix Vercel runtime configuration - remove deprecated nodejs18.x runtime and update to Node 20

--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -3,12 +3,11 @@
   "framework": "nextjs",
   "functions": {
     "src/app/api/**/*.ts": {
-      "maxDuration": 30,
-      "runtime": "nodejs18.x"
+      "maxDuration": 30
     }
   },
   "env": {
-    "NODE_VERSION": "18",
+    "NODE_VERSION": "20",
     "NEXT_TELEMETRY_DISABLED": "1"
   },
   "build": {
