--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,14 @@
 {
   "version": 2,
+  "framework": "nextjs",
   "functions": {
     "apps/web/src/app/api/**/*.ts": {
-      "maxDuration": 30,
-      "runtime": "nodejs18.x"
+      "maxDuration": 30
     }
   },
   "env": {
     "VERCEL": "1",
-    "NODE_VERSION": "18"
+    "NODE_VERSION": "20"
   },
   "build": {
     "env": {
