Remove Turborepo cache files and node_modules from Git tracking
- Remove all .turbo/ cache files, cookies, and build logs from Git
- Remove node_modules/.turbo/ files that were incorrectly tracked
- Improve .gitignore with comprehensive patterns:
  - **/node_modules/ (catches nested node_modules)
  - **/.turbo/ (catches all turbo directories)
  - *.turbo-*.log (catches all turbo log files)

These files should never be in version control as they are:
- Build artifacts that change constantly
- Environment-specific cache files
- Can cause merge conflicts and bloat repository size

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # Dependencies
 node_modules/
+**/node_modules/
 /.pnp
 .pnp.*
 .yarn/*
@@ -33,6 +34,10 @@ lib/
 
 # Turborepo
 .turbo/
+**/.turbo/
+*.turbo-build.log
+*.turbo-type-check.log
+*.turbo-lint.log
 
 # TypeScript
 *.tsbuildinfo
