--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -41,11 +41,12 @@
     "react-native-web": "^0.20.0",
     "react-native-web-linear-gradient": "^1.1.2",
     "shared-types": "workspace:^",
-    "shared-ui": "workspace:^"
+    "shared-ui": "workspace:^",
+    "typescript": "~5.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
+    "@types/react": "~19.0.14",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3"
