--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
   },
   "devDependencies": {
     "@turbo/gen": "^2.0.0",
-    "turbo": "^2.0.0",
     "next": "15.3.2",
-    "typescript": "^5.8.3"
+    "turbo": "^2.0.0",
+    "typescript": "5.8.3"
   },
   "packageManager": "pnpm@8.15.6",
   "engines": {
