--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "lib": ["DOM", "DOM.Iterable", "ES6"],
+    "lib": [
+      "DOM",
+      "DOM.Iterable",
+      "ES6"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -17,15 +21,32 @@
     "jsx": "preserve"
   },
   "references": [
-    { "path": "./packages/shared-types" },
-    { "path": "./packages/shared-ui" },
-    { "path": "./packages/database" },
-    { "path": "./packages/api-client" },
-    { "path": "./packages/business-logic" },
-    { "path": "./packages/config" },
-    { "path": "./packages/firebase-config" },
-    { "path": "./packages/shared-utils" }
+    {
+      "path": "./packages/shared-types"
+    },
+    {
+      "path": "./packages/shared-ui"
+    },
+    {
+      "path": "./packages/database"
+    },
+    {
+      "path": "./packages/api-client"
+    },
+    {
+      "path": "./packages/business-logic"
+    },
+    {
+      "path": "./packages/config"
+    },
+    {
+      "path": "./packages/firebase-config"
+    },
+    {
+      "path": "./packages/shared-utils"
+    }
   ],
   "files": [],
-  "include": []
+  "include": [],
+  "extends": "expo/tsconfig.base"
 }
