fix: Add Metro cache and development files to .gitignore
- Add .metro-cache/ directories to prevent tracking Metro bundler cache
- Add React Native development scripts (start-*.js, start-*.bat, start-*.ps1)
- Add temporary development files (fix-*.js, postcss.config.js)
- Add .npmrc and pnpm debug logs
- Prevent 1000+ cache files from being tracked by Git

--- a/.gitignore
+++ b/.gitignore
@@ -178,6 +178,29 @@ web-build/
 
 # Metro
 .metro-health-check*
+.metro-cache/
+**/.metro-cache/
+apps/mobile/.metro-cache/
+
+# React Native / Expo Development Files
+apps/mobile/expo-start.js
+apps/mobile/fix-expo-cache.js
+apps/mobile/metro.config.fallback.js
+apps/mobile/metro.config.simple.js
+apps/mobile/postcss.config.js
+apps/mobile/scripts/
+apps/mobile/start-*.bat
+apps/mobile/start-*.ps1
+apps/mobile/start-*.js
+
+# Web Development Files
+apps/web/fix-*.js
+apps/web/src/types/components.ts
+apps/web/src/types/react-fixes.d.ts
+
+# Package Manager Files
+.npmrc
+**/pnpm-debug.log*
 
 # Xcode
 *.pbxuser
