--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -5,17 +5,30 @@
     "skipLibCheck": true,
     "noImplicitAny": false,
     "jsx": "react-jsx",
+    "jsxImportSource": "react",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "moduleResolution": "bundler",
-    "noEmit": true
+    "noEmit": true,
+    "target": "ES2022",
+    "lib": ["ES2022", "DOM", "DOM.Iterable"],
+    "types": ["react", "react-native"],
+    "paths": {
+      "@/*": ["./src/*"],
+      "react": ["../node_modules/@types/react"],
+      "react-native": ["../node_modules/@types/react-native"]
+    }
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
     "src/types/**/*.d.ts",
     "nativewind-env.d.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "scripts"
   ]
 }
