--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -42,8 +42,8 @@
     "@react-email/render": "^1.1.2",
     "@reduxjs/toolkit": "^2.5.0",
     "@supabase/supabase-js": "^2.50.0",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.0",
     "@types/ws": "^8.18.1",
     "@upstash/redis": "^1.35.0",
     "api-client": "workspace:*",
@@ -63,8 +63,8 @@
     "ioredis": "^5.4.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
@@ -92,15 +92,5 @@
   "engines": {
     "node": "18.x || 20.x || 22.x",
     "npm": ">=8.0.0"
-  },
-  "overrides": {
-    "md-to-react-email": {
-      "react": "$react"
-    },
-    "@types/react": "^19.1.0",
-    "@types/react-dom": "^19.1.0",
-    "redux-persist": {
-      "@types/react": "^19.1.0"
-    }
   }
 }
