fix: Update Vercel configuration for Next.js App Router API routes
- Fix functions pattern from '**/*.ts' to '**/route.ts' for App Router compatibility
- Add proper monorepo build commands for PNPM workspace
- Use 'vercel-build' script for consistent deployment
- Resolves 'pattern doesn't match any Serverless Functions' error

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,10 @@
 {
   "version": 2,
   "framework": "nextjs",
+  "buildCommand": "cd ../.. && pnpm run vercel-build",
+  "installCommand": "cd ../.. && pnpm install",
   "functions": {
-    "apps/web/src/app/api/**/*.ts": {
+    "apps/web/src/app/api/**/route.ts": {
       "maxDuration": 30
     }
   },
