fix: Prevent npm lockfile conflicts in .gitignore
- Add package-lock.json to .gitignore to prevent future npm/pnpm conflicts
- Ensure only pnpm-lock.yaml is tracked for consistent package management
- Prevents accidental npm install from creating conflicting lockfiles

--- a/.gitignore
+++ b/.gitignore
@@ -202,6 +202,10 @@ apps/web/src/types/react-fixes.d.ts
 .npmrc
 **/pnpm-debug.log*
 
+# Prevent npm lockfile conflicts with pnpm
+package-lock.json
+**/package-lock.json
+
 # Xcode
 *.pbxuser
 !default.pbxuser
