fix: Align web app .npmrc with root configuration
- Set auto-install-peers=true in apps/web/.npmrc to match root .npmrc
- Ensures consistent peer dependency handling across monorepo
- Prevents PNPM_LOCKFILE_CONFIG_MISMATCH errors in Vercel deployment
- Maintains configuration consistency between local and deployment environments

--- a/apps/web/.npmrc
+++ b/apps/web/.npmrc
@@ -4,8 +4,8 @@ package-manager=pnpm
 # Enable hoisting for monorepo compatibility
 hoist-pattern[]=*
 
-# Disable auto-install peers to prevent conflicts
-auto-install-peers=false
+# Enable auto-install peers to match root configuration
+auto-install-peers=true
 
 # Use workspace protocol
 enable-pre-post-scripts=true
