--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -15,6 +15,7 @@
     "shared-types": "workspace:*"
   },
   "devDependencies": {
+    "@types/node": "^20.17.57",
     "typescript": "^5.8.3"
   }
 }
