--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -4,7 +4,7 @@
     "strict": false,
     "skipLibCheck": true,
     "noImplicitAny": false,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
     "jsxImportSource": "react",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
@@ -13,19 +13,40 @@
     "moduleResolution": "bundler",
     "noEmit": true,
     "target": "ES2022",
-    "lib": ["ES2022", "DOM", "DOM.Iterable"],
-    "types": ["react", "react-native"],
+    "lib": [
+      "ES2022",
+      "DOM",
+      "DOM.Iterable"
+    ],
+    "types": [
+      "react",
+      "react-native"
+    ],
     "paths": {
-      "@/*": ["./src/*"],
-      "react": ["../node_modules/@types/react"],
-      "react-native": ["../node_modules/@types/react-native"]
-    }
+      "@/*": [
+        "./src/*"
+      ],
+      "react": [
+        "../node_modules/@types/react"
+      ],
+      "react-native": [
+        "../node_modules/@types/react-native"
+      ]
+    },
+    "incremental": true,
+    "isolatedModules": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
+    "nativewind-env.d.ts",
     "src/types/**/*.d.ts",
-    "nativewind-env.d.ts"
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules",
