--- a/packages/firebase-config/package.json
+++ b/packages/firebase-config/package.json
@@ -17,6 +17,7 @@
     "shared-types": "workspace:*"
   },
   "devDependencies": {
+    "@types/node": "^20.17.57",
     "typescript": "^5.8.3"
   }
 }
