--- a/turbo.json
+++ b/turbo.json
@@ -42,6 +42,19 @@
     "STRIPE_WEBHOOK_SECRET",
     "NEXT_PUBLIC_APP_URL",
     "NEXT_PUBLIC_API_URL",
+    "SUPABASE_SERVICE_ROLE_KEY",
+    "ENABLE_SUPABASE_CMS",
+    "UPSTASH_REDIS_REST_URL",
+    "UPSTASH_REDIS_REST_TOKEN",
+    "ENABLE_REDIS_CACHING",
+    "REDIS_DEFAULT_TTL",
+    "ENABLE_EMAIL_NOTIFICATIONS",
+    "EMAIL_FROM_NAME",
+    "EMAIL_REPLY_TO",
+    "GOOGLE_AI_API_KEY",
+    "ENABLE_AI_FEATURES",
+    "AI_MODEL_DEFAULT",
+    "NODE_VERSION",
     "NODE_ENV",
     "CI",
     "VERCEL",
