🚀 Add professional GitHub Actions Android build system
- Add complete GitHub Actions workflow for APK/AAB generation
- Add Android signing keystore setup
- Add build scripts and documentation
- Ready for production Google Play Store builds

--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -25,7 +25,11 @@
         "backgroundColor": "#f3a823"
       },
       "package": "com.tap2go.mobile",
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "versionCode": 1,
+      "compileSdkVersion": 34,
+      "targetSdkVersion": 34,
+      "buildToolsVersion": "34.0.0"
     },
     "web": {
       "favicon": "./assets/favicon.png"
