--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "npx next dev --turbopack",
-    "build": "npx next build",
+    "build": "npm run patch-styled-jsx && npx next build",
     "start": "npx next start",
     "lint": "npx next lint",
     "type-check": "tsc --noEmit",
     "clean": "rm -rf .next",
+    "patch-styled-jsx": "node scripts/patch-styled-jsx.js",
+    "postinstall": "npm run patch-styled-jsx",
     "update-system-docs": "node scripts/update-system-docs.js",
     "add-restaurants": "node scripts/add-sample-restaurants.js",
     "clear-db": "node scripts/clear-database.js --confirm",
@@ -40,7 +42,7 @@
     "@opensearch-project/opensearch": "^3.5.1",
     "@react-email/components": "^0.0.25",
     "@react-email/render": "^1.1.2",
-    "@reduxjs/toolkit": "^2.5.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "@supabase/supabase-js": "^2.50.0",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.0",
