--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -32,7 +32,7 @@
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "typeRoots": [
-      "./node_modules/@types",
+      "../../node_modules/@types",
       "./src/types"
     ]
   },
