--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -39,13 +39,13 @@
     "@react-navigation/bottom-tabs": "^7.3.17",
     "@react-navigation/native": "^7.1.13",
     "@react-navigation/stack": "^7.3.6",
-    "expo": "~53.0.12",
+    "expo": "53.0.13",
     "expo-asset": "^11.1.5",
     "expo-constants": "^17.1.6",
     "expo-file-system": "^18.1.10",
     "expo-font": "^13.3.1",
     "expo-linear-gradient": "~14.1.5",
-    "expo-router": "^5.1.0",
+    "expo-router": "~5.1.1",
     "expo-status-bar": "~2.2.3",
     "fbjs": "^3.0.5",
     "firebase": "^11.8.1",
