mobile was renamed into mobile-customer

--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
     "lint": "turbo run lint",
     "clean": "turbo run clean",
     "type-check": "pnpm run type-check:packages && pnpm run type-check:apps",
-    "type-check:apps": "pnpm run type-check:web && pnpm run type-check:mobile",
+    "type-check:apps": "pnpm run type-check:web && pnpm run type-check:mobile-customer",
     "type-check:web": "cd apps/web && npx tsc --noEmit",
-    "type-check:mobile": "cd apps/mobile && npx tsc --noEmit",
+    "type-check:mobile-customer": "cd apps/mobile-customer && npx tsc --noEmit",
     "type-check:packages": "tsc --build",
     "type-check:turbo": "turbo run type-check",
     "web:dev": "turbo run dev --filter=web",
     "web:build": "turbo run build --filter=web",
     "web:start": "cd apps/web && pnpm start",
     "web:deploy": "cd apps/web && pnpm run build",
-    "mobile:dev": "turbo run dev --filter=mobile",
-    "mobile:build": "turbo run build --filter=mobile",
-    "mobile:ios": "turbo run ios --filter=mobile",
-    "mobile:android": "turbo run android --filter=mobile",
+    "mobile:dev": "turbo run dev --filter=mobile-customer",
+    "mobile:build": "turbo run build --filter=mobile-customer",
+    "mobile:ios": "turbo run ios --filter=mobile-customer",
+    "mobile:android": "turbo run android --filter=mobile-customer",
     "vercel-build": "cd apps/web && pnpm run build",
     "start": "cd apps/web && pnpm start"
   },
