fix: modernize Gradle plugin syntax to resolve deprecation warnings
- Replace deprecated 'apply plugin' with modern 'plugins {}' block syntax
- Update root build.gradle and app build.gradle
- Remove --warning-mode all from GitHub Actions
- Fixes Gradle 9.0 compatibility issues

--- a/apps/mobile-customer/android/build.gradle
+++ b/apps/mobile-customer/android/build.gradle
@@ -33,5 +33,7 @@ allprojects {
   }
 }
 
-apply plugin: "expo-root-project"
-apply plugin: "com.facebook.react.rootproject"
+plugins {
+  id("expo-root-project")
+  id("com.facebook.react.rootproject")
+}
