--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -100,7 +100,7 @@ jobs:
         working-directory: apps/mobile-customer/android
         run: |
           chmod +x gradlew
-          ./gradlew assembleDebug --stacktrace --warning-mode all
+          ./gradlew assembleDebug --stacktrace
 
       # 🏗️ Build APK (Release)
       - name: 🏗️ Build APK (Release)
@@ -108,7 +108,7 @@ jobs:
         working-directory: apps/mobile-customer/android
         run: |
           chmod +x gradlew
-          ./gradlew assembleRelease --stacktrace --warning-mode all
+          ./gradlew assembleRelease --stacktrace
 
       # 📦 Build AAB (Release)
       - name: 📦 Build AAB (Release)
@@ -116,7 +116,7 @@ jobs:
         working-directory: apps/mobile-customer/android
         run: |
           chmod +x gradlew
-          ./gradlew bundleRelease --stacktrace --warning-mode all
+          ./gradlew bundleRelease --stacktrace
 
       # 📤 Upload APK (Debug)
       - name: 📤 Upload APK (Debug)
