feat: comprehensive pnpm monorepo fix for React Native Metro bundler
- Configure pnpm shameful hoisting for React Native compatibility
- Add pnpm hoisting patterns for expo, react-native, babel, metro packages
- Update Metro config with enhanced workspace root watching
- Install @babel/runtime in both workspace root and mobile app
- Configure GitHub Actions with proper pnpm hoisting settings
- Add .npmrc with React Native specific hoisting patterns
- Clean reinstall with new pnpm configuration

This resolves Metro bundler module resolution issues in pnpm monorepos
by ensuring proper dependency hoisting for React Native ecosystem packages.

--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -64,10 +64,12 @@ jobs:
       - name: 🤖 Setup Android SDK
         uses: android-actions/setup-android@v3
 
-      # 📦 Install dependencies
-      - name: 📦 Install dependencies
+      # 📦 Install dependencies with pnpm hoisting
+      - name: 📦 Install dependencies with pnpm hoisting
         run: |
-          pnpm install
+          pnpm config set shamefully-hoist true
+          pnpm config set public-hoist-pattern "*expo*" "*react-native*" "*@babel*" "*metro*"
+          pnpm install --no-frozen-lockfile
 
       # 🔧 Install Expo CLI
       - name: 🔧 Install Expo CLI
