--- a/apps/mobile-customer/package.json
+++ b/apps/mobile-customer/package.json
@@ -29,6 +29,7 @@
     "prebuild:clean": "npx expo prebuild --clear"
   },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.27.4",
     "@babel/runtime": "^7.27.6",
     "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.1.0",
@@ -64,7 +65,7 @@
     "typescript": "~5.8.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
+    "@babel/core": "^7.27.4",
     "@expo/cli": "^0.24.15",
     "@types/react": "~19.0.10",
     "babel-preset-expo": "^13.2.1",
