--- a/package.json
+++ b/package.json
@@ -35,12 +35,25 @@
     "typescript": "5.8.3"
   },
   "packageManager": "pnpm@8.15.6",
+  "pnpm": {
+    "shamefullyHoist": true,
+    "hoistPattern": [
+      "*"
+    ],
+    "publicHoistPattern": [
+      "*expo*",
+      "*react-native*",
+      "*@babel*",
+      "*metro*"
+    ]
+  },
   "engines": {
     "node": "18.x || 20.x || 22.x",
     "npm": ">=8.0.0",
     "pnpm": ">=8.0.0"
   },
   "dependencies": {
+    "@babel/runtime": "^7.27.6",
     "@headlessui/react": "^2.2.4",
     "redux-persist": "^6.0.0"
   }
