fix: resolve Metro bundler @babel/runtime issue in CI environment
CRITICAL FIXES:
- Fix Metro config CI optimization that was removing monorepoRoot from watchFolders
- Add explicit @babel/runtime installation step in GitHub Actions
- Improve @babel/runtime alias resolution logic for CI vs local environments
- Ensure Metro can resolve babel helpers in both local and CI environments

This resolves the 'Unable to resolve module @babel/runtime/helpers/interopRequireDefault'
error that was occurring specifically in GitHub Actions CI builds.

--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -71,6 +71,12 @@ jobs:
           pnpm config set public-hoist-pattern "*expo*" "*react-native*" "*@babel*" "*metro*"
           pnpm install --no-frozen-lockfile
 
+      # 🔧 Ensure @babel/runtime is available locally for Metro
+      - name: 🔧 Ensure @babel/runtime is available locally for Metro
+        run: |
+          cd apps/mobile-customer
+          pnpm add @babel/runtime --save-exact
+
       # 🔧 Install Expo CLI
       - name: 🔧 Install Expo CLI
         run: pnpm add -g @expo/cli
