--- a/apps/mobile-customer/android/app/build.gradle
+++ b/apps/mobile-customer/android/app/build.gradle
@@ -1,8 +1,6 @@
-plugins {
-  id("com.android.application")
-  id("org.jetbrains.kotlin.android")
-  id("com.facebook.react")
-}
+apply plugin: "com.android.application"
+apply plugin: "org.jetbrains.kotlin.android"
+apply plugin: "com.facebook.react"
 
 def projectRoot = rootDir.getAbsoluteFile().getParentFile().getAbsolutePath()
 
@@ -119,7 +117,7 @@ android {
             crunchPngs (findProperty('android.enablePngCrunchInReleaseBuilds')?.toBoolean() ?: true)
         }
     }
-    packaging {
+    packagingOptions {
         jniLibs {
             useLegacyPackaging (findProperty('expo.useLegacyPackaging')?.toBoolean() ?: false)
         }
@@ -129,22 +127,22 @@ android {
     }
 }
 
-// Apply static values from `gradle.properties` to the `android.packaging`
+// Apply static values from `gradle.properties` to the `android.packagingOptions`
 // Accepts values in comma delimited lists, example:
-// android.packaging.resources.pickFirsts=/LICENSE,**/picasa.ini
+// android.packagingOptions.pickFirsts=/LICENSE,**/picasa.ini
 ["pickFirsts", "excludes", "merges", "doNotStrip"].each { prop ->
     // Split option: 'foo,bar' -> ['foo', 'bar']
-    def options = (findProperty("android.packaging.resources.$prop") ?: "").split(",");
+    def options = (findProperty("android.packagingOptions.$prop") ?: "").split(",");
     // Trim all elements in place.
     for (i in 0..<options.size()) options[i] = options[i].trim();
     // `[] - ""` is essentially `[""].filter(Boolean)` removing all empty strings.
     options -= ""
 
     if (options.length > 0) {
-        println "android.packaging.resources.$prop += $options ($options.length)"
-        // Ex: android.packaging.resources.pickFirsts += '**/SCCS/**'
+        println "android.packagingOptions.$prop += $options ($options.length)"
+        // Ex: android.packagingOptions.pickFirsts += '**/SCCS/**'
         options.each {
-            android.packaging.resources[prop] += it
+            android.packagingOptions[prop] += it
         }
     }
 }
