--- a/apps/mobile-customer/package.json
+++ b/apps/mobile-customer/package.json
@@ -41,7 +41,7 @@
     "@react-navigation/native": "^7.1.13",
     "@react-navigation/stack": "^7.3.6",
     "expo": "53.0.13",
-    "expo-build-properties": "~0.12.5",
+    "expo-build-properties": "~0.14.6",
     "expo-asset": "^11.1.5",
     "expo-constants": "^17.1.6",
     "expo-file-system": "^18.1.10",
@@ -55,11 +55,11 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.4",
-    "react-native-maps": "^1.20.1",
+    "react-native-maps": "1.20.1",
     "react-native-reanimated": "3.17.4",
-    "react-native-safe-area-context": "^5.4.0",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.11.1",
-    "react-native-svg": "^15.11.2",
+    "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
     "react-native-web-linear-gradient": "^1.1.2",
@@ -69,7 +69,7 @@
     "@babel/core": "^7.27.4",
     "@expo/cli": "^0.24.15",
     "@types/react": "~19.0.10",
-    "babel-preset-expo": "^13.2.1",
+    "babel-preset-expo": "~13.0.0",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "3.3.2",
     "typescript": "~5.8.3"
