--- a/apps/mobile-customer/package.json
+++ b/apps/mobile-customer/package.json
@@ -37,8 +37,8 @@
     "@react-native-firebase/app": "^22.2.1",
     "@react-native-firebase/auth": "^22.2.1",
     "@react-native-firebase/firestore": "^22.2.1",
-    "@react-navigation/bottom-tabs": "^7.3.17",
-    "@react-navigation/native": "^7.1.13",
+    "@react-navigation/bottom-tabs": "^7.3.10",
+    "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.3.6",
     "expo": "53.0.13",
     "expo-build-properties": "~0.14.6",
@@ -73,6 +73,13 @@
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "3.3.2",
     "typescript": "~5.8.3"
+  },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
   },
   "private": true
 }
